SERVER-60916 Attempt to reload ShardRegistry in resharding coordinator.

The ARS (AsyncRequestSender) calls ShardRegistry::getShardNoReload() and
can therefore throw a ShardNotFound exception when the ShardRegistry is
still initializing.

(cherry picked from commit dd41a99e2c177d5bd3a38229d85458117480c5d9)